# HoudiniEngineSample

./: CMakeLists.txt  HoudiniEngineGeometry.cpp  HoudiniEngineGeometry.h  HoudiniEngineManager.cpp  HoudiniEngineManager.h  HoudiniEngineSample.cpp  HoudiniEngineUtility.cpp  HoudiniEngineUtility.h  LICENSE.md  README.md
HDA/: hexagona_lite.hda
Source/: HoudiniApi.cpp  HoudiniApi.h  HoudiniEngineGeometry.cpp  HoudiniEngineManager.cpp  HoudiniEngineManager.h  HoudiniEnginePlatform.cpp  HoudiniEnginePlatform.h  HoudiniEngineSample.cpp  HoudiniEngineUtility.cpp
